--- a/data_analysis_challenge.ipynb
+++ b/data_analysis_challenge.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:071adfca094d1f0c984949c38a514c97df7fc33e39983d552966a20492eb5831"
+  "signature": "sha256:01703e2d86a0d7a68ef64b36ddaf77cef69be8dbbba76b6ce4f3faf6fc7dd9df"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -86,7 +86,8 @@
       "        for dest_plot in dest_month_dict.keys():\n",
       "            counter = Counter(dest_month_dict[dest_plot])\n",
       "            list_month_occ = sorted(counter.items(), key=itemgetter(0))\n",
-      "            plt.plot([p[0] for p in list_month_occ], [p[1] for p in list_month_occ], label=dest_plot)\n",
+      "            plt.plot([p[0] for p in list_month_occ], [p[1]\n",
+      "                                                      for p in list_month_occ], label=dest_plot)\n",
       "        plt.title(\n",
       "            \"Searches for flights arriving at Malaga, Madrid or Barcelona\")\n",
       "        plt.legend(loc='upper right')\n",
@@ -108,8 +109,13 @@
       "                    bookings_dep_port = row_bookings[9].strip()\n",
       "                    booking_arr_port = row_bookings[12].strip()\n",
       "\n",
-      "                    if(searches_origin == bookings_dep_port and searches_destination == booking_arr_port):\n",
-      "                        print searches_origin, searches_destination, \"1\"\n",
+      "                    searches_office_id = row_searches[3]\n",
+      "                    bookings_office_id = row_bookings[5]\n",
+      "\n",
+      "                    if(searches_origin == bookings_dep_port and\n",
+      "                            searches_destination == booking_arr_port and\n",
+      "                            searches_office_id == bookings_office_id):\n",
+      "                        print searches_origin, searches_destination, searches_office_id, \"1\"\n",
       "                except:\n",
       "                    pass\n",
       "\n",
@@ -130,49 +136,72 @@
       "    # at Malaga, Madrid or Barcelona\n",
       "    plot_monthly_number_of_searches(\"searches.csv\", [\"AGP\", \"MAD\", \"BCN\"])\n",
       "\n",
-      "    #Bonus exercise 1 : match searches with bookings\n",
-      "    #work in progress\n",
-      "    #match_searches_bookings(\"searches.csv\", \"bookings.csv\")\n",
-      "\n",
-      "\n",
-      "if __name__ == \"__main__\":\n",
-      "    main()\n"
+      "    # Bonus exercise 1 : match searches with bookings\n",
+      "    # work in progress\n",
+      "    match_searches_bookings(\"searches.csv\", \"bookings.csv\")\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "number_of_line_csv(\"searches.csv\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
        "text": [
-        "number of lines in :  bookings.csv "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "10000011\n",
-        "number of lines in :  searches.csv "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "20390199\n",
-        "Top 10 arrival airports in the world in 2013 and their passengers number :  "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[('LHR', 88809), ('MCO', 70930), ('LAX', 70530), ('LAS', 69630), ('JFK', 66270), ('CDG', 64490), ('BKK', 59460), ('MIA', 58150), ('SFO', 58000), ('DXB', 55590)]\n"
+        "20390199"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "number_of_line_csv(\"bookings.csv\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "10000011"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plot_monthly_number_of_searches(\"searches.csv\", [\"AGP\", \"MAD\", \"BCN\"])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"figure_1.png\">"
+     ]
     },
     {
      "cell_type": "code",
