typo fix+ exercise 2 added --All mandatory exercises are done

--- a/data_analysis_challenge.ipynb
+++ b/data_analysis_challenge.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:01703e2d86a0d7a68ef64b36ddaf77cef69be8dbbba76b6ce4f3faf6fc7dd9df"
+  "signature": "sha256:73bebb729f15b33d0d94120fa2b283d2afabb21d6ba241a9f19c4ecdd5ee5d67"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -184,6 +184,35 @@
       }
      ],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "top_10_airports(\"bookings.csv\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "[('LHR', 88809),\n",
+        " ('MCO', 70930),\n",
+        " ('LAX', 70530),\n",
+        " ('LAS', 69630),\n",
+        " ('JFK', 66270),\n",
+        " ('CDG', 64490),\n",
+        " ('BKK', 59460),\n",
+        " ('MIA', 58150),\n",
+        " ('SFO', 58000),\n",
+        " ('DXB', 55590)]"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
