pandas version of TOP-10 airports added

--- a/data_analysis_challenge.ipynb
+++ b/data_analysis_challenge.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:73bebb729f15b33d0d94120fa2b283d2afabb21d6ba241a9f19c4ecdd5ee5d67"
+  "signature": "sha256:6f11dc857c78303af12c83f77b2df245e31c384831f79c42c7251e4cfed8502b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -29,6 +29,7 @@
       "from operator import itemgetter\n",
       "import dateutil.parser\n",
       "import matplotlib.pyplot as plt\n",
+      "import pandas as pd\n",
       "\n",
       "\n",
       "def number_of_line_csv(csvfile):\n",
@@ -108,7 +109,7 @@
       "\n",
       "                    bookings_dep_port = row_bookings[9].strip()\n",
       "                    booking_arr_port = row_bookings[12].strip()\n",
-      "\n",
+      "                    # not sure about rhe row position !!!\n",
       "                    searches_office_id = row_searches[3]\n",
       "                    bookings_office_id = row_bookings[5]\n",
       "\n",
@@ -118,6 +119,15 @@
       "                        print searches_origin, searches_destination, searches_office_id, \"1\"\n",
       "                except:\n",
       "                    pass\n",
+      "\n",
+      "\n",
+      "def top_10_airports_panda_version(csvfile):\n",
+      "    df = pd.read_csv(\n",
+      "        csvfile, sep='^', quotechar='\\'', header=0,\n",
+      "        usecols=[12, 34], names=['arr_port', 'pax'], skipinitialspace=True)\n",
+      "    grps = df.groupby(by=['arr_port'], sort=False).sum().sort(\n",
+      "        ['pax'], ascending=False).head(10)\n",
+      "    return grps\n",
       "\n",
       "\n",
       "def main():\n",
@@ -143,7 +153,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -235,7 +245,9 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "top_10_airports_panda_version(\"bookings.csv\")"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
