--- a/data_analysis_challenge.ipynb
+++ b/data_analysis_challenge.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6f11dc857c78303af12c83f77b2df245e31c384831f79c42c7251e4cfed8502b"
+  "signature": "sha256:a9d44228067881b75d8e8aea9a1af64bb59034c9b1d8d64f1a31c302954b1772"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -30,6 +30,7 @@
       "import dateutil.parser\n",
       "import matplotlib.pyplot as plt\n",
       "import pandas as pd\n",
+      "from datetime import datetime\n",
       "\n",
       "\n",
       "def number_of_line_csv(csvfile):\n",
@@ -121,13 +122,21 @@
       "                    pass\n",
       "\n",
       "\n",
-      "def top_10_airports_panda_version(csvfile):\n",
+      "def top_10_airports_pandas_version(csvfile):\n",
       "    df = pd.read_csv(\n",
       "        csvfile, sep='^', quotechar='\\'', header=0,\n",
       "        usecols=[12, 34], names=['arr_port', 'pax'], skipinitialspace=True)\n",
       "    grps = df.groupby(by=['arr_port'], sort=False).sum().sort(\n",
       "        ['pax'], ascending=False).head(10)\n",
       "    return grps\n",
+      "\n",
+      "# Not yet done\n",
+      "def plot_monthly_number_of_searches_pandas_version(csvfile, dest=[]):\n",
+      "    parse = lambda x: datetime.strptime(x, '%Y-%m-%d')\n",
+      "    df = pd.read_csv(csvfile, sep='^', quotechar='\\'', header=0, usecols=[0, 6], names=['Date', 'Destination'], skipinitialspace=True, index_col = 0, date_parser=parse)\n",
+      "    grps = df.groupby(by=['Date'], sort=False)['Destination'].sum()\n",
+      "\n",
+      "\n",
       "\n",
       "\n",
       "def main():\n",
@@ -153,7 +162,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -246,8 +255,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "top_10_airports_panda_version(\"bookings.csv\")"
+      "top_10_airports_pandas_version(\"bookings.csv\")"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
