--- a/data_analysis_challenge.ipynb
+++ b/data_analysis_challenge.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a9d44228067881b75d8e8aea9a1af64bb59034c9b1d8d64f1a31c302954b1772"
+  "signature": "sha256:44b130a7f1a5c2b74bd402da77d68c660c7d959638daad54638b26a225e27ece"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -259,7 +259,86 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>pax</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>arr_port</th>\n",
+        "      <th></th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>LHR     </th>\n",
+        "      <td> 88809</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>MCO     </th>\n",
+        "      <td> 70930</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>LAX     </th>\n",
+        "      <td> 70530</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>LAS     </th>\n",
+        "      <td> 69630</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>JFK     </th>\n",
+        "      <td> 66270</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>CDG     </th>\n",
+        "      <td> 64490</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>BKK     </th>\n",
+        "      <td> 59460</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>MIA     </th>\n",
+        "      <td> 58150</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>SFO     </th>\n",
+        "      <td> 58000</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>DXB     </th>\n",
+        "      <td> 55590</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "            pax\n",
+        "arr_port       \n",
+        "LHR       88809\n",
+        "MCO       70930\n",
+        "LAX       70530\n",
+        "LAS       69630\n",
+        "JFK       66270\n",
+        "CDG       64490\n",
+        "BKK       59460\n",
+        "MIA       58150\n",
+        "SFO       58000\n",
+        "DXB       55590"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
