--- a/data_analysis_challenge.ipynb
+++ b/data_analysis_challenge.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ff9d92d0baa1e1c110ab52b9652e0c13254aa61b59667217b44f6f1d79c8d5fa"
+  "signature": "sha256:2f2bdaff085a8bed561382da07939147a4d465b777ba42f5cb6b6c34f14ff2cc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -162,7 +162,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -216,7 +216,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 5,
        "text": [
         "[('LHR', 88809),\n",
         " ('MCO', 70930),\n",
@@ -231,7 +231,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -241,14 +241,13 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src=\"figure_1.png\">"
+      "<img src=\"figure_1.png\" />"
      ]
     },
     {
@@ -321,7 +320,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 8,
        "text": [
         "            pax\n",
         "arr_port       \n",
@@ -338,7 +337,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 8
     }
    ],
    "metadata": {}
